--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-redux-socket",
   "version": "2.2.3",
   "description": "Lightweight library to handle redux actions at server side using sockets",
+  "main": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
